--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <div id="image-hack"></div>
 <div id="adRoot" onclick="javascript:window.open(window.clickTag)">
   <div class="bg-image"></div>
+  <div id="bgImage"></div>
+  <div id="headline">demo headline</div>
   <div class="logo-sprite"></div>
   <div class="logo-sprite-retina"></div>
   <div id='demoSVG' class='abs-banner'></div>
@@ -49,8 +51,10 @@
   var dataManager = DataManager();
   var downloadPreview = false;
   var previewNumber = 1;
-  var sheetId = ""; // If this is an empty string the dynamic system will be ignored
-  var projectId = "";// If this is an empty string the dynamic system will be ignored
+  var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI"; // If this is an empty string the dynamic system will be ignored
+  var projectId = "000_Dynamic_Ad_Template";// If this is an empty string the dynamic system will be ignored
+
+  // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
 </script>
 
 
