--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   var dataManager = DataManager();
   var downloadPreview = false;
   var previewNumber = 1;
-  var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI"; // If this is an empty string the dynamic system will be ignored
-  var projectId = "000_Dynamic_Ad_Template";// If this is an empty string the dynamic system will be ignored
+  var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
+  var projectId = "000_Dynamic_Ad_Template";
 
   // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
 </script>
@@ -65,7 +65,15 @@
   };
   window.onload = function (){
 
-    DynamicBootloader (window.ad.init);
+    try {
+      DynamicBootloader (window.ad.init);
+    }catch (err){
+
+      console.log ('Dynamics Engine Not Included, Proceed as standard');
+
+    }
+
+
 
   }
 </script>
