--- a/_kit-specific-html/FT/index.html
+++ b/_kit-specific-html/FT/index.html
@@ -16,18 +16,17 @@
 </head>
 <body>
 <div id="image-hack"></div>
-<div id="adRoot">
-  <div class="bg-image"></div>
-  <div class="logo-sprite"></div>
-  <div class="logo-sprite-retina"></div>
-  <div id='demoSVG' class='abs-banner'></div>
-  <div id="catchAll" class="catch-all hidden"></div>
-  <div id="cta" class="cta hidden">click here!!!</div>
+<div id="background-border" class="size-collapsed"></div>
+<div id="ad-root-wrapper" class="wrapper-collapsed">
+  <div id="adRoot">
+    <div class="bg-image"></div>
+    <div class="logo-sprite"></div>
+    <div class="logo-sprite-retina"></div>
+    <div id='demoSVG' class='abs-banner'></div>
+    <div id="catchAll" class="catch-all hidden"></div>
+    <div id="cta" class="cta hidden">click here!!!</div>
+  </div>
 </div>
-<div id="border-top" class="top-collapsed-border invisible"></div>
-<div id="border-left" class="left-collapsed-border invisible"></div>
-<div id="border-right" class="right-collapsed-border invisible"></div>
-<div id="border-bottom" class="bottom-collapsed-border invisible"></div>
 <!--Uncomment this to use CDN version of Greensock, remove local version if you do this.  -->
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>-->
 <!-- build:js combined.js -->
@@ -36,7 +35,8 @@
 <script type="text/javascript" src="js/vendor/SmoothifyPlugin.js"></script>
 <script type="text/javascript" src="js/vendor/DynamicAd.js"></script> <!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
 <script type="text/javascript" src="js/vendor/DataManager.js"></script><!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
-<script type="text/javascript" src="js/vendor/DynamicBootloader.js"></script><!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
+<script type="text/javascript" src="js/vendor/DynamicBootloader.js"></script>
+<!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
 <script type="text/javascript" src="js/svglib.js"></script>
 <script type="text/javascript" src="js/svg-img-loader.js"></script>
 <script type="text/javascript" src="js/Animation.js"></script>
@@ -71,15 +71,13 @@
       window.ad.init()
     }
   } else {
-    myFT.on("ready", function (){
-
+    myFT.on("ready", function () {
       try {
         DynamicBootloader(window.ad.init);
       } catch (err) {
         console.log('Dynamics Engine Not Included, Proceed as standard');
         window.ad.init()
       }
-
     });
   }
 </script>
