--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <meta name="template.type" content="DCStudio">
-  <meta name="bundle.static" content="in.zip">
-  <meta name="ad.size" content="width=300,height=250">
-  <meta name="ad.fileSize" content="200">
-  <meta name="ad.numFiles" content="15">
-  <meta name="ad.staticFileSize" content="40">
-  <meta name="ad.compression" content="60">
-  <meta name="ad.minifyhtml" content="true">
+  <meta name="template.type" content="DCM">
+  <meta name="bundle.static" content="in.folder"><!--Valid values are "in.zip" and "in.folder" -->
+  <meta name="ad.size" content="width=300,height=250"><!--Dimensions in Pixels-->
+  <meta name="ad.fileSize" content="200"><!--File Size of Final Zip in Kilobytes-->
+  <meta name="ad.numFiles" content="15"><!--Don't Edit-->
+  <meta name="ad.staticFileSize" content="40"><!--File Size of static backup in Kilobytes-->
+  <meta name="ad.compression" content="60"><!--compression for jpeg sprites-->
+  <meta name="ad.minifyhtml" content="true"><!--minify html file  set to false for sizmek-->
   <meta name="ad.spriteBackgroundColor" content="#FFFFFF"><!--background color for jpeg sprites-->
-  <title>HTML5 Template DC Studio</title>
+  <title>HTML5 Template DCM Direct</title>
   <link inline rel="stylesheet" type="text/css" href="css/style.css">
-  <script type="text/javascript" src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
+  <script type="text/javascript">var clickTag = "https://www.google.com";</script>
 </head>
 <body>
 <div id="image-hack"></div>
 <div id="background-border" class="size-collapsed"></div>
 <div id="ad-root-wrapper" class="wrapper-collapsed">
   <div id="adRoot" onclick="javascript:window.open(window.clickTag)">
-    <div class="bg-image">{{bgColor}}</div>
+    <div class="bg-image"></div>
     <div id="bgImage"></div>
     <div id="headline">demo headline</div>
     <div class="logo-sprite"></div>
@@ -38,7 +38,6 @@
 <script type="text/javascript" src="js/vendor/bowser.min.js"></script><!-- If you don't need this you can remove it -->
 <script type="text/javascript" src="js/vendor/greensock/TweenMax.min.js"></script>
 <script type="text/javascript" src="js/vendor/SmoothifyPlugin.js"></script>
-<script type="text/javascript" src="js/vendor/DynamicTemplate.js"></script>
 <script type="text/javascript" src="js/vendor/DynamicAd.js"></script> <!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
 <script type="text/javascript" src="js/vendor/DataManager.js"></script><!-- REMOVE IF YOU ARE NOT DOING DYNAMICS -->
 <script type="text/javascript" src="js/vendor/DynamicBootloader.js"></script>
@@ -62,42 +61,15 @@
   } catch (err) {
     console.log('Dynamics Engine Not Included, Proceed as standard');
   }
-</script>
-<script type="text/javascript">
 
+</script>
+
+<script type="text/javascript">
   window.clickHandler = function () {
-    Enabler.exit('exit', 'https://www.google.com'); // set initial URL here, can still be overwritten in DC Studio or DCM
+    return 'Handler is silent';
   };
-  var adVisibleFunc = function () {
-    console.log("Enabler VISIBLE");
-    Enabler.setProfileId(10024307);
-    try {
-      DynamicBootloader(window.ad.init);
-    } catch (err) {
-      console.log('Dynamics Engine Not Included, Proceed as standard');
-      window.ad.init()
-    }
-  };
-  var pageLoadedFunc = function () {
-    console.log("Enabler PAGE_LOADED");
-    if (!Enabler.isVisible()) {
-      Enabler.addEventListener(studio.events.StudioEvent.VISIBLE, adVisibleFunc);
-    } else {
-      adVisibleFunc();
-    }
-  };
-  var enablerInitFunc = function () {
-    console.log("Enabler INIT");
-    if (!Enabler.isPageLoaded()) {
-      Enabler.addEventListener(studio.events.StudioEvent.PAGE_LOADED, pageLoadedFunc);
-    } else {
-      pageLoadedFunc();
-    }
-  };
-  if (!Enabler.isInitialized()) {
-    Enabler.addEventListener(studio.events.StudioEvent.INIT, enablerInitFunc);
-  } else {
-    enablerInitFunc();
+  window.onload = function () {
+    DynamicBootloader(window.ad.init);
   }
 </script>
 </body>
