--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
   try {
     var dynamicAd = DynamicAd();
     var dataManager = DataManager();
-    var downloadPreview = false;
+    var downloadPreview = true;
     var previewNumber = 1;
-    var sheetId = "1Z6z5t91qqYrFblYxC6AnHkP8duHGQrSaw9JoovZyBwI";
-    var projectId = "000_Dynamic_Ad_Template";
+    var sheetId = "1lM5IZu_bPKaS3qjBFPoPxZ15oqVx7-V6qPoWK7karls";
+    var projectId = "000_test_ad";
     // var previewData = {}; // DO NOT DELETE - REQUIRED FOR AD GENERATOR
   } catch (err) {
     console.log('Dynamics Engine Not Included, Proceed as standard');
